--- a/salty-news/src/index.css
+++ b/salty-news/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+input {
+  width: 13vw;
+} 
+
+.form-container-grid {
+    display: grid;
+    grid-template-columns: 0.3fr 1fr 2.2fr;
+    margin-bottom: 4px;
+}
