Rework Header layout; page styles; fix bad route path

--- a/salty-news/src/index.css
+++ b/salty-news/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 8px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -22,7 +22,11 @@ input {
 } 
 
 .form-container-grid {
-    display: grid;
-    grid-template-columns: 0.3fr 1fr 2.2fr;
-    margin-bottom: 4px;
+  display: grid;
+  grid-template-columns: 0.3fr 1fr 2.2fr;
+  margin-bottom: 4px;
+}
+
+.focus {
+  font-weight: bold;
 }
